--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    env_file:
+      - .env # .env 파일을 환경 변수로 로드
     ports:
       - "80:3000" # 호스트 포트 80을 컨테이너 포트 3000에 매핑
     volumes:
