--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.9.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "three": "^0.176.0",
     "web-vitals": "^2.1.4"
   },
@@ -22,6 +22,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "overrides": {
+    "nth-check": "2.1.1",
+    "postcss": "8.4.38",
+    "webpack-dev-server": "4.15.2"
   },
   "eslintConfig": {
     "extends": [
